--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,25 +1,86 @@
-.home_wrapper {
+.home {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 57px;
+
+  border-bottom: 1px solid var(--color-alt-white);
+}
+
+.main {
   display: grid;
   width: 100%;
-  min-height: 100vh;
+  min-height: 100%;
 
   grid-template-columns: 80% 20%;
-  grid-template-rows: auto 1fr;
 }
 
-.header_wrapper {
-  grid-column: 1 / 3;
-  grid-row: 1;
+.content {
+  padding: 0 10px 10px 0;
+  overflow-y: auto;
 }
 
-.aside_wrapper {
-  background-color: yellow;
+/* Chrome */
+.content::-webkit-scrollbar {
+  width: 10px;
 
-  grid-column: 2;
+  background-color: var(--color-gray);
 }
 
-.content_wrapper {
-  background-color: blue;
+.content::-webkit-scrollbar-track {
+  background-color: var(--color-gray);
+}
 
-  grid-row: 2;
+.content::-webkit-scrollbar-thumb {
+  background-color: var(--color-gray);
+}
+
+.content::-webkit-scrollbar-thumb:hover {
+  background-color: var(--color-gray);
+}
+
+/* Firefox */
+.content {
+  scrollbar-color: #888888 var(--color-gray);
+  scrollbar-width: thin;
+}
+
+.aside {
+  padding: 20px 10px;
+  overflow-y: auto;
+
+  border-left: 1px solid var(--color-alt-white);
+}
+
+/* Chrome */
+.aside::-webkit-scrollbar {
+  width: 10px;
+
+  background-color: var(--color-gray);
+}
+
+.aside::-webkit-scrollbar-track {
+  background-color: var(--color-gray);
+}
+
+.aside::-webkit-scrollbar-thumb {
+  background-color: var(--color-gray);
+}
+
+.aside::-webkit-scrollbar-thumb:hover {
+  background-color: var(--color-gray);
+}
+
+/* Firefox */
+.aside {
+  scrollbar-color: #888888 var(--color-gray);
+  scrollbar-width: thin;
 }
